@@ -1,3 +1,8 @@
+Fri Jul 14 14:16:27 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Rework debugging system so that it uses C style IO, and has various other
+	  improvements.
+
 Fri Jul 14 14:07:00 BST 2000 Olly Betts
 
 	* Updated .cvsignore-s
